Fixed header list overflow on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -221,6 +221,9 @@ body a {
   .category ul {
     text-align: center;
   }
+  .aux {
+    display:none !important;
+  }
 }
 
 #fileItem {
